--- a/src/App.css
+++ b/src/App.css
@@ -3,52 +3,33 @@
   margin: 0;
 }
 
+html
+{
+  font-size:62.5%;
+}
+
 body {
-  margin: 1em 10%;
+  margin:1rem auto 1rem auto;
+  padding:0;
   background-image: url(./images/background.gif);
   background-attachment: fixed;
   background-position: top left;
   background-repeat: repeat-x;
-  max-width: 80em;
+  max-width: 80rem;
+  font-size:2rem;
 }
-#header {
-  /*background-image: url(../images/guitarist.gif);*/
-  background-repeat: no-repeat;
-  background-position: bottom right;
-  border-width: .1em;
-  border-style: solid;
-  border-bottom-width: 0;
+
+img
+{
+  display:block;
+  width:100%;
+  height:100%;
 }
-#navigation {
-  /*background-image: url(../images/navbar.gif);*/
-  background-position: bottom left;
-  background-repeat: repeat-x;
-  border-width: .1em;
-  border-style: solid;
-  border-bottom-width: 0;
-  border-top-width: 0;
-  padding-left: 10%;
-}
-#navigation ul {
-  width: 100%;
-  overflow: hidden;
-  border-left-width: .1em;
-  border-left-style: solid;
-}
-#navigation li {
-  display: inline;
-}
-#navigation li a {
-  display: block;
-  float: left;
-  padding: .5em 2em;
-  border-right: .1em solid;
-}
+
 #content {
-  border-width: .1em;
+  border-width: 1rem;
   border-style: solid;
-  border-top-width: 0;
-  padding: 2em 10%;
+  padding: 1rem 10%;
   line-height: 1.8em;
 }
 #about #header {
