--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,40 +1,41 @@
 body {
-  font-size: 76%;
-  font-family: "Helvetica","Arial",sans-serif;
+  font-family: 'PT Sans',sans-serif;
 }
 body * {
-  font-size: 1em;
+  font-size: 1rem;
 }
 a {
   font-weight: bold;
   text-decoration: none;
 }
-#navigation {
-  font-family: "Lucida Grande","Helvetica","Arial",sans-serif;
-}
-#navigation a {
-  text-decoration: none;
-  font-weight: bold;
-}
+
 #content {
-  line-height: 1.8em;
+  line-height: 2rem;
 }
 #content p {
-  margin: 1em 0;
+  margin: 1rem 0;
+  font-size:1.4rem;
 }
+#content p a
+{
+  font-size:1.4rem;
+}
+
 h1 {
-  font-family: "Georgia","Times New Roman",sans-serif;
-  font: 2.4em normal;
+  font-family: 'PT Sans',sans-serif;
+  font-size: 2.4rem;
+  font-weight: 700;
+  margin:1rem 0;
 }
 h2 {
-  font-family: "Georgia","Times New Roman",sans-serif;
-  font: 1.8em normal;
-  margin-top: 1em;
+  font-family: 'PT Sans',sans-serif;
+  font-size: 1.8rem;
+  margin-top: 1rem;
 }
 h3 {
-  font-family: "Georgia","Times New Roman",sans-serif;
-  font: 1.4em normal;
-  margin-top: 1em;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.4rem;
+  margin-top: 1rem;
 }
 #imagegallery li {
   list-style-type: none;
@@ -46,5 +47,5 @@ dd {
   margin-right: 3em;
 }
 textarea {
-  font-family: "Helvetica","Arial",sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
